--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,44 @@
+# IDE
 .idea
+.vscode
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 .venv
-.*
-_*
+venv/
+ENV/
+env/
+
+# Project specific
 trie.json
 custom.txt
 out.txt
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Misc
+.*
+_*
