--- a/.env.sample
+++ b/.env.sample
@@ -1,78 +1,59 @@
 # Automobile Complete Environment Variables
 # Copy this file to .env and modify as needed
 # Values in .env will override these defaults
+ASSETS=%/assets
 
 # ============================================================================
-# File Paths
+# amcw - Wordlist Generation (output destination)
 # ============================================================================
+AMC_WORDLIST_DST=$ASSETS/wordlist.txt
 
-# Default wordlist file
-AMC_WORDLIST_FILE=%AMC%/assets/wordlist.txt
-
-# Default completion list file
-AMC_COMPLETIONLIST_FILE=%AMC%/assets/completionlist.txt
-
-# ============================================================================
-# Wordlist Generation (amc wordlist / amc w)
-# ============================================================================
-
-# Language code for wordfreq wordlist (e.g., 'en', 'es', 'fr')
-AMC_WORDLIST_LANG=en
-
-# Regex pattern to filter words (default: starts with letter)
-AMC_WORDLIST_PATTERN=^[a-zA-Z].+
-
-# Maximum number of words to include (empty = all matching words)
-AMC_WORDLIST_MAX_WORDS=
-
-# Minimum word length (in characters)
-AMC_WORDLIST_MIN_LENGTH=2
-
-# Omit frequency information from output (true/false)
-AMC_WORDLIST_NO_FREQS=false
+# params
+AMC_WORDLIST_LANG=en# Language code for wordfreq wordlist (e.g., 'en', 'es', 'fr')
+AMC_WORDLIST_PATTERN=^[a-zA-Z].+# Regex pattern to filter words (default: starts with letter)
+AMC_WORDLIST_MAX_WORDS=# Maximum number of words to include (empty = all matching words)
+AMC_WORDLIST_MIN_LENGTH=2# Minimum word length (in characters)
+AMC_WORDLIST_NO_FREQS=false# Omit frequency information from output (true/false)
 
 # ============================================================================
-# Wordlist Merge (amc wordlist-merge / amc wm)
+# amcmw - Wordlist Merging
 # ============================================================================
+AMC_WORDLIST_MERGE_SRC=$AMC_WORDLIST_DST
+AMC_WORDLIST_MERGE_GLOB=custom-words*
+AMC_WORDLIST_MERGE_DST=$ASSETS/merged-wordlist.txt
 
-# Omit frequency information from merged output (true/false)
-AMC_WORDLIST_MERGE_NO_FREQS=false
-
-# ============================================================================
-# Completion List Generation (amc preprocess / amc c)
-# ============================================================================
-
-# Minimum probability threshold (0.0-1.0) for word completion (empty = uses subtree-threshold)
-AMC_COMPLETIONLIST_WORD_THRESHOLD=
-
-# Minimum probability threshold (0.0-1.0) for subtree completion
-AMC_COMPLETIONLIST_SUBTREE_THRESHOLD=0.5
-
-# Selected completion must be this many times more likely than alternatives (word)
-AMC_COMPLETIONLIST_WORD_RATIO_THRESHOLD=1.0
-
-# Selected completion must be this many times more likely than alternatives (subtree)
-AMC_COMPLETIONLIST_SUBTREE_RATIO_THRESHOLD=1.0
-
-# Minimum length of prefix before auto-completion
-AMC_COMPLETIONLIST_MIN_PREFIX_LEN=2
-
-# Minimum length of completion suffix
-AMC_COMPLETIONLIST_MIN_SUFFIX_LEN=2
-
-# Omit frequency information from output (true/false)
-AMC_COMPLETIONLIST_NO_PRESERVE_FREQS=false
+# params
+AMC_WORDLIST_MERGE_NO_FREQS=false# Omit frequency information from merged output (true/false)
 
 # ============================================================================
-# Completion List Merge (amc preprocess-merge / amc cm)
+# amcc - Completion List Generation
 # ============================================================================
+AMC_COMPLETIONLIST_SRC=$AMC_WORDLIST_MERGE_SRC|$AMC_WORDLIST_DST
+AMC_COMPLETIONLIST_DST=$ASSETS/completionlist.txt
 
-# Omit frequency information from merged output (true/false)
+# params
+AMC_COMPLETIONLIST_WORD_THRESHOLD=# Minimum probability threshold (0.0-1.0) for word completion (empty = uses subtree-threshold)
+AMC_COMPLETIONLIST_SUBTREE_THRESHOLD=0.5# Minimum probability threshold (0.0-1.0) for subtree completion
+AMC_COMPLETIONLIST_WORD_RATIO_THRESHOLD=1.0# Selected completion must be this many times more likely than alternatives (word)
+AMC_COMPLETIONLIST_SUBTREE_RATIO_THRESHOLD=1.0# Selected completion must be this many times more likely than alternatives (subtree)
+AMC_COMPLETIONLIST_MIN_PREFIX_LEN=2# Minimum length of prefix before auto-completion
+AMC_COMPLETIONLIST_MIN_SUFFIX_LEN=2# Minimum length of completion suffix
+AMC_COMPLETIONLIST_NO_PRESERVE_FREQS=false# Omit frequency information from output (true/false)
+
+# ============================================================================
+# amcmc - Completionlist Mergins
+# ============================================================================
+AMC_COMPLETIONLIST_MERGE_SRC=$AMC_COMPLETIONLIST_DST
+AMC_COMPLETIONLIST_MERGE_GLOB=custom-completions*
+AMC_COMPLETIONLIST_MERGE_DST=$ASSETS/merged-completionlist.txt
+
+# params
 AMC_COMPLETIONLIST_MERGE_NO_FREQS=false
-
 # ============================================================================
-# Interactive Run (amc run / amc r)
+# amc - Interactive Run (input source)
 # ============================================================================
+AMC_SRC=$AMC_COMPLETIONLIST_MERGE_DST|$AMC_COMPLETIONLIST_DST
 
-# Enable verbose output (show loading messages, etc.) (true/false)
-AMC_RUN_NOISY=false
+#params
+AMC_RUN_NOISY=false# Enable verbose output (show loading messages, etc.) (true/false)
+AMC_RUN_PLACEHOLDER=Start typing to test the auto-complete...# Placeholder text shown before typing
