--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,7 @@ wheels/
 MANIFEST
 .venv
 venv/
-ENV/
-env/
+
 
 # Project specific
 trie.json
@@ -42,3 +41,7 @@ htmlcov/
 # Misc
 .*
 _*
+
+# add back in __init__.py and __main__.py files
+!*__init__.py
+!*__main__.py
