--- a/react-native-engine/package.json
+++ b/react-native-engine/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "node build.js"
   },
   "dependencies": {
     "expo": "~54.0.27",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "esbuild": "^0.19.12",
     "typescript": "~5.9.2"
   },
   "private": true
