--- a/react-native-engine/package.json
+++ b/react-native-engine/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "archiver": "^7.0.1",
     "esbuild": "^0.19.12",
     "typescript": "~5.9.2"
   },
