--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -5,27 +5,12 @@
   "description": "Universal autocomplete for any input field",
   "permissions": [
     "storage",
-    "activeTab",
-    "tabs"
+    "scripting",
+    "webNavigation"
   ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
-  "content_scripts": [
-    {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "baked-completions.js",
-        "automobile-complete.js",
-        "content-script.js"
-      ],
-      "run_at": "document_idle",
-      "all_frames": false,
-      "match_about_blank": false
-    }
-  ],
+  "background": {
+    "service_worker": "service-worker.js"
+  },
   "action": {
     "default_popup": "popup.html",
     "default_title": "Automobile Complete"
@@ -34,15 +19,5 @@
     "16": "icon16.png",
     "48": "icon48.png",
     "128": "icon128.png"
-  },
-  "web_accessible_resources": [
-    {
-      "resources": [
-        "automobile-complete.js"
-      ],
-      "matches": [
-        "<all_urls>"
-      ]
-    }
-  ]
+  }
 }
