--- a/.env.sample
+++ b/.env.sample
@@ -56,4 +56,4 @@ AMC_SRC=$AMC_COMPLETIONLIST_MERGE_DST|$AMC_COMPLETIONLIST_DST
 
 #params
 AMC_RUN_NOISY=false# Enable verbose output (show loading messages, etc.) (true/false)
-AMC_RUN_PLACEHOLDER=Start typing to test the auto-complete...# Placeholder text shown before typing
+AMC_RUN_PLACEHOLDER=""# Placeholder text shown before typing
